# linera_market

./: Dockerfile  README.md  docker-compose.dev.yaml
.devcontainer/: devcontainer.json
contracts/my-fungible/: Cargo.toml
contracts/my-fungible/src/: contract.rs  lib.rs  service.rs  state.rs
contracts/my-fungible/tests/: single_chain.rs
contracts/truemarket/: Cargo.toml
contracts/truemarket/src/: contract.rs  lib.rs  service.rs  state.rs
contracts/truemarket/tests/: single_chain.rs
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/: AIChat.tsx  CategoryCarousel.tsx  LineraTestCounter.tsx  MarketCard.tsx
frontend/components/common/: WalletButton.tsx
frontend/components/layout/: Header.tsx  RootContent.tsx  Sidebar.tsx
frontend/components/market/: MarketChart.tsx  MarketHeader.tsx  MarketOpinions.tsx  MarketRules.tsx  TimelineCard.tsx  TradeCard.tsx
frontend/components/markets/: FeaturedCarousel.tsx
frontend/content/docs/: ai-assistant.mdx  getting-started.mdx  index.mdx  liquidity-pools.mdx  market-data-structure.mdx  meta.json  portfolio-management.mdx  security-best-practices.mdx  trading-guide.mdx  troubleshooting-faq.mdx
frontend/lib/: chains.ts  data.ts  env.ts  layout.shared.tsx  leaderboard-data.ts
frontend/lib/abi/: FaucetABI.ts  PredictionMarketABI.ts  TraderVaultFactoryABI.ts  VaultABI.ts  VerificationABI.ts
frontend/lib/contexts/: AirkitContext.tsx  LineraContext.tsx
frontend/lib/providers/: AirkitProvider.tsx  (+2 more)
(+27 files in other folders)
