[package]
name = "truemarket"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
linera-sdk = "0.15.5"
futures = { version = "0.3 "}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
num-bigint = "0.4"
num-traits = "0.2"
my-fungible={path="../my-fungible"}

[dev-dependencies]
linera-sdk = { version = "0.15.5", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "truemarket_contract"
path = "src/contract.rs"

[[bin]]
name = "truemarket_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
